fix navbar links on smaller screens

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -66,7 +66,7 @@
 
 .nav-links-container {
   margin: 0 auto;
-  width: 435px;
+  width: 485px;
 }
 
 .nav-links {
